<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">程序员在囧途</string>
    <string name="main_page">主页</string>
    <string name="action_settings">设置</string>
    <string name="forum">版块</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="splash_hint">程序员在囧途</string>
	<string name="loading">正在加载中</string>
	<string name="pull_down_to_refresh">下拉刷新</string>
	<string name="release_to_refresh">松开立即刷新</string>
	<string name="refreshing">正在刷新</string>
	
	<string name="user_name">用户名</string>
	<string name="email">电子邮件</string>
	<string name="register">注册</string>
	<string name="refresh">刷新</string>
	<string name="captcha">验证码</string>
	<string name="register_hint">密码将通过电子邮件发送给您。</string>

	<string name="num_floor">%d楼</string>
	<string name="floor_main">楼主</string>
	<string name="reply">回复</string>
</resources>
