<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dip"
    android:background="#ffffffff"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff7b5c3d"
        android:text="@string/user_name"/>
    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="48dip"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff7b5c3d"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/user_email_input"
        android:layout_width="match_parent"
        android:layout_height="48dip"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff7b5c3d"
        android:text="@string/captcha"/>
    <EditText
        android:id="@+id/captcha_input"
        android:layout_width="match_parent"
        android:layout_height="48dip"/>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <ImageView
	        android:id="@+id/blcap_img"
	        android:layout_width="0dip"
	        android:layout_height="56dip"
	        android:layout_weight="1"/>
	    <Button
	        android:id="@+id/refresh_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="56dip"
	        android:text="@string/refresh"/>
	</LinearLayout>
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff7b5c3d"
        android:text="@string/register_hint"/>

	<Button
	    android:id="@+id/register_btn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:text="@string/register" />
</LinearLayout>
